css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Noto Sans', sans-serif;
}

:root{
    --bg-button: #4a4a4a;
    --bg-body: #000000;
    --bg-footer: #222222;
    --bg-cam-more: #0a70ec;
    --text-white: #FFFFFF;
    --text-red: #f02022;
    --text-green: #4ac700;
    --grey: #4a4a4a;
}

/* ICONS
<i class="fa-solid fa-circle"></i>
<i class="fa-solid fa-table-cells"></i>
<i class="fa-solid fa-maximize"></i>

<i class="fa-solid fa-microphone-slash"></i>

<i class="fa-solid fa-microphone"></i>
<i class="fa-solid fa-angle-up"></i>
<i class="fa-solid fa-video"></i>
<i class="fa-solid fa-angle-up"></i>

<i class="fa-solid fa-user-plus"></i>
<i class="fa-solid fa-user-group"></i>
<i class="fa-solid fa-chart-column"></i>
<i class="fa-solid fa-share-from-square"></i>
<i class="fa-solid fa-angle-up"></i>
<i class="fa-solid fa-comment"></i>
<i class="fa-solid fa-record-vinyl"></i>
<i class="fa-solid fa-table-cells-large"></i>
<i class="fa-solid fa-ellipsis"></i>


<i class="fa-solid fa-caret-left"></i>
<i class="fa-solid fa-caret-right"></i> 
*/

.page-container{
    height: 100vh;
    background-color: var(--bg-body);
    color: var(--text-white);
    position: relative;  
}

.debug{
    border: 1px solid white;
}
.d-flex{
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-content: center;
}

ul{
    list-style: none;
}

a{
    text-decoration: none;
    color: var(--text-white);
}
li{
    padding: 5px;
}


/* header */
header{
    height: 2.3rem;
    padding: 5px;
}
header a{
    background-color: var(--bg-button);
    border-radius: 4px;
    padding: 0 5px;
}

.recording i{
    padding-right: 5px;
    color: var(--text-red);
}
/* main */
main{
    height: calc(100vh - 7.3rem);
}
.arrow-left{
    padding-left: 20px;
    font-size: 2rem;
    color: var(--grey);
    width: 5%;
}
.arrow-right{
    padding-right: 20px;
    font-size: 2rem;
    color: var(--grey);
    width: 5%;
    flex-direction: row-reverse;
}

.cams-container{
    margin: 0 auto;
    width: 80%;
}

.single-cam{
    padding: 5px;
    position: relative;
}
.single-cam img{
    width: 300px;
    display: block;
}
.names{
    background-color: var(--bg-button);
    position: absolute;
    left: 5px;
    bottom: 5px;
    border-radius: 4px;
    padding: 2px 10px;
}

.names i{
    color: var(--text-red);
}
.cam-more{
    position: absolute;
    background-color: var(--bg-cam-more);
    top: 8px;
    right: 8px;
    padding: 0 4px;
    border-radius: 4px;
}



/* footer */
footer{
    background-color: var(--bg-footer);
    height: 5rem;
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
}


/* utilities */

.small-text{
    font-size: 0.7rem;
}

.align-content{
    align-content: center;
}

